Update test